...
                android:layout_marginTop="500dp"
                android:orientation="vertical"
                android:padding="20dp">


                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/orange_border"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:drawablePadding="8dp"
                    android:hint="Email"
                    android:padding="8dp"/>

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/orange_border"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:padding="8dp" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="30dp"
                    android:text="Bejelentkezés"
                    android:textSize="18sp"
                    app:cornerRadius="30dp" />

                <TextView
                    android:id="@+id/signupRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="14dp"
                    android:padding="8dp"
                    android:text="Nincs még felhasználód? regisztálj"
...
