...
            android:orientation="vertical"
            android:layout_marginTop="380dp"
            android:padding="20dp">


            <EditText
                android:id="@+id/apply_description"
                android:layout_width="match_parent"
                android:layout_height="217dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/orange_border"
                android:drawableLeft="@drawable/baseline_people_24"
                android:drawablePadding="8dp"
...
                android:padding="8dp" />

            <Button
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:text="Munkára Jelentkezés"
                android:id="@+id/apply_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius = "30dp"/>

            <TextView
                android:id="@+id/textView9"
...
