<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/asdasdsadsa"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="380dp"
            android:padding="20dp">


            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/signup_firstname"
                android:background="@drawable/orange_border"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="Keresztnév"
                android:drawableLeft="@drawable/baseline_people_24"
                android:drawablePadding="8dp"/>

            <EditText
                android:id="@+id/signup_lastname"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/orange_border"
                android:drawableLeft="@drawable/baseline_people_24"
                android:drawablePadding="8dp"
                android:hint="Vezetéknév"
                android:padding="8dp" />

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/signup_email"
                android:background="@drawable/orange_border"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="Email"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"/>
            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/signup_studentId"
                android:background="@drawable/orange_border"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="Azonosító Szám"
                android:drawableLeft="@drawable/baseline_people_24"
                android:drawablePadding="8dp"/>

            <EditText
                android:id="@+id/signup_birthdate"
                android:layout_width="355dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/orange_border"
                android:drawableLeft="@drawable/baseline_people_24"
                android:drawablePadding="8dp"
                android:hint="Születési dátum"
                android:padding="8dp" />

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/signup_password"
                android:background="@drawable/orange_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="Jelszó"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/signup_confirm"
                android:background="@drawable/orange_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="Jelszó megerősítése"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_baseline_password_24"
                android:drawablePadding="8dp"/>

            <Button
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:text="Regisztráció"
                android:id="@+id/signup_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius = "30dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirectText"
                android:text="Van felhasználód? Jelentkezz be"
                android:layout_gravity="center"
                android:padding="8dp"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/orange"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>